# transcriptr

./: .gitignore  README.md  pyproject.toml  record.sh  sample_record.py  transcriptr.service
transcriptr/: record.py
